--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,14 @@
   padding: 0;
   scroll-behavior: smooth;
 }
+
+a{
+  text-decoration: none;
+  color: gray;
+  transition: all 0.3s linear;
+}
+
+a:hover{
+  color: #F2613F;
+  text-decoration: underline;
+}
